@@ -1,2 +1,1 @@
 lib/*/libnss_sss.so.2
-usr/share/lintian/overrides/libnss-sss
