@@ -21,6 +21,7 @@ sssd (1.8.0~beta3-1) UNRELEASED; urgency=low
   * rules: Remove some files we don't want to install, to make dh_install
     happy.
   * rules: Clean *.gmo and *.pyc.
+  * Install lintian overrides using dh_lintian.
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 16 Feb 2012 10:24:46 +0200
 
